[package]
name = "pycameleon"
version = "0.2.8"
edition = "2021"
license = "MIT"

include = [
    "src/**/*",
    "Cargo.toml",
    "LICENSE",
    "pycameleon.pyi",
]

[lib]
name = "pycameleon"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["abi3-py39", "extension-module", "multiple-pymethods"] }
cameleon = { version = "0.1.12", features = ["libusb"] }
numpy = "0.27"
thiserror = "2.0.17"
